# menntr-ai-mock-interview

./: .env  .env.example  Dockerfile  Dockerfile.agent  README.md  docker-compose.yml  gradio_app.py  pyproject.toml  railway-setup.md  requirements.txt
app/ai/: langgraph_flow.py  llm_client.py  mcp_server.py
app/core/: config.py
app/models/: interview_state.py
app/services/: interviewer.py  resume_parser.py  scoring.py  speech_to_text.py  streaming_stt.py  text_to_speech.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FRONTEND.md  INTERVIEW_ENGINE.md  LANGGRAPH.md  LOCAL_DEVELOPMENT.md  NFRs.md  TECH_ARCHITECTURE.md  USER_GUIDE.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  opengraph-image.tsx  page.tsx
frontend/components/interview/: participant-video.tsx  room-controls.tsx  transcription-display.tsx
frontend/components/layout/: navbar.tsx
frontend/hooks/: use-livekit-room.ts
frontend/public/: site.webmanifest
lk_env/: pyvenv.cfg
lk_env/Scripts/: activate  activate.bat
src/agents/: interview_agent.py  resources.py
src/core/: config.py
src/schemas/: interview.py
src/services/analysis/: code_analyzer.py  feedback_generator.py  response_analyzer.py
src/services/data/: resume_parser.py  state_manager.py
src/services/logging/: interview_logger.py
src/services/orchestrator/: action_nodes.py  constants.py  control_nodes.py  graph.py  intent_detection.py  langgraph_orchestrator.py  llm_helpers.py  plan_generator.py  types.py
(+8 files in other folders)
